# engos-tool-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
.sqlx/: query-05256c23a04deccbbebfa8d3825255785595caf9892d237f36d5874384ce265a.json  query-296d8a7a1ac58bd062e30bf9eb49abcf121b210acceed31709b6aef8b2a28dea.json  query-3565d55208dca52a1eba00e84b810e1113cf84c557610261d8ebd62494a647de.json  query-3b865103dc3106ac93dace9cfc9d295c40e9f49e08d684fb2109efc0efb12350.json  query-415037e38c4997ae5b281145a397354ea44f5f5ba3597c9808a13ba1f23f0dbb.json  query-55f42da44f4b861916cea1b423b1e119a5ddd30009198aa93275920a4daa561e.json  query-5e4fc95430240b3740266c503981e4de3ef85612221d7797852755e7ad730adb.json  query-684285dcb9cad11c0fa99703d676d7cd9dd7292af822af96eaf287a6d654aaff.json  query-6e71d10177d4cb26b154961de62fbe7642490a64b7a141b61ec6fe8e910dba77.json  query-86d67daed97d7e9f562885c872bddef97b87bbdf440f5849afe8925e30063792.json  query-90ca954a9febd2d81d7a73ecfef56f93ba114d5421d827e9583a919c7538f18d.json  query-9f2994e5802ceb431f9fd45a5fede466436238e1e53bc06adb85fc8056808574.json  query-d5673e21ab657c95e627dcae1f94694acd451595cb60a219c213ba9e58c2d1dd.json  query-e3b88680f9adc46892a61710f395c246039987e12890faf1d0dd03034f246ad4.json
migrations/: 001_init.sql  002_spaced_repetition.sql  003_ai_usage.sql  init.sql
src/: main.rs
src/application/: deps.rs  mod.rs
src/domain/: chat_state.rs  difficulty.rs  error.rs  mod.rs  sentence.rs  usage.rs  (+4 more)
tests/: repository_integration.rs
(+37 files in other folders)
