[package]
name = "engos-tool-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
