[package]
name = "engos-tool-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
dotenvy = "0.15.7"

# --- Error handling ---
thiserror = "2.0"

# --- Structured logging / observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.6", features = [
    "trace",
    "catch-panic",
    "limit",
    "timeout",
] }

# --- LINE webhook signature verification (HMAC-SHA256) ---
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2.6"
